[package]
name = "wasm-contract-experiments"
version = "0.1.0"
authors = ["Peter Donald <peter@realityforge.org>"]

[dependencies]
pwasm-std = "0.6"
pwasm-ethereum = "0.3"

[dependencies.parity-hash]
version = "1"
default-features = false

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
